minor link updates

--- a/campaign/locations/regions/Matella/Elda_Reem_Passlands/Elda_Reem_Passlands.html
+++ b/campaign/locations/regions/Matella/Elda_Reem_Passlands/Elda_Reem_Passlands.html
@@ -60,7 +60,7 @@
     The Elda Reem Passlands, situated just northwest of the
     <a href="../Mentassa_Plains/Mentassa_Plains.html">
      Mentassa Plains</a>, encompass a diverse and rugged region renowned for its unique terrain. Dominating the southeastern portion of the Passlands is the
-    <a href="../Mentassa_Plains/Utengho_Marshlands.html">
+    <a href="Utengho_Marshlands.html">
      Utengho Marshlands</a>, a sprawling expanse of marshy landscapes teeming with vibrant flora and fauna. To the north and west, a majestic mountain range stands proudly, guarding the region and offering a wealth of precious crystals and gemstones within its depths. However, traversing these mountains can be perilous, as they are inhabited by fearsome dragons, unique creatures, and cunning bandits seeking to exploit unwary travelers. On the opposite side of the Passlands lies the
     <a href="../Gharoni_Highlands/Gharoni_Highlands.html">
      Gharoni Highlands</a>, with an elevated plateau and meadows characterized by its own distinct features and challenges. Nestled to the northeastern reaches of the Passlands, the rugged mountainous region of
@@ -274,7 +274,7 @@
    <p>
     <ul>
      <li>
-      <a href="../Mentassa_Plains/Utengho_Marshlands.html">
+      <a href="Utengho_Marshlands.html">
        Utengho Marshlands
       </a>
      </li>
