--- a/campaign/locations/regions/Matella/Mentassa_Plains/Mentassa_Plains.html
+++ b/campaign/locations/regions/Matella/Mentassa_Plains/Mentassa_Plains.html
@@ -438,7 +438,7 @@
    <p>
     <ul>
      <li>
-      <a href="Utengho_Marshlands.html">
+      <a href="../Elda_Reem_Passlands/Utengho_Marshlands.html">
        Utengho Marshlands
       </a>
      </li>
