Created some HTML files

--- a/campaign/creatures/monsters/img/index.html
+++ b/campaign/creatures/monsters/img/index.html
@@ -111,6 +111,26 @@
      </a>
     </li>
     <li>
+     <a href="ancient_vister_guardian (1).jpg">
+      ancient vister guardian (1).jpg
+     </a>
+    </li>
+    <li>
+     <a href="ancient_vister_guardian (2).jpg">
+      ancient vister guardian (2).jpg
+     </a>
+    </li>
+    <li>
+     <a href="ancient_vister_guardian (3).jpg">
+      ancient vister guardian (3).jpg
+     </a>
+    </li>
+    <li>
+     <a href="ancient_vister_guardian (4).jpg">
+      ancient vister guardian (4).jpg
+     </a>
+    </li>
+    <li>
      <a href="stoneshaper_golem.jpg">
       stoneshaper golem.jpg
      </a>
