--- a/campaign/creatures/monsters/index.html
+++ b/campaign/creatures/monsters/index.html
@@ -51,6 +51,11 @@
   <div class="indexLinks">
    <ul>
     <li>
+     <a href="Ancient_Vister_Guardian.html">
+      Ancient Vister Guardian
+     </a>
+    </li>
+    <li>
      <a href="Astral_Gazers.html">
       Astral Gazers
      </a>
@@ -167,6 +172,34 @@
       <i class="fas fa-camera">
       </i>
       img/Illusionary_Mimics (4).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/ancient_vister_guardian (1).jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/ancient_vister_guardian (1).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/ancient_vister_guardian (2).jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/ancient_vister_guardian (2).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/ancient_vister_guardian (3).jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/ancient_vister_guardian (3).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/ancient_vister_guardian (4).jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/ancient_vister_guardian (4).jpg
      </a>
     </li>
     <li>
