--- a/campaign/items/magic/The_Antianimus_Device.html
+++ b/campaign/items/magic/The_Antianimus_Device.html
@@ -93,10 +93,7 @@
     The Antianimus Device
    </h3>
    <p class="first-paragraph">
-    The Antianimus Device is huge ancient device found in a temple on chik'acarka island. This device was created by an ancient Aztec-like civilization that lived thousands of years prior. The civilization practiced spiritual rituals involving the human souls and humanoid sacrifices. They heavily believed in the connections of bloodlines and the power to control entire bloodlines with a great understanding of the physical blood and spiritual soul connections. The Antianimus Device revolves around this philosophy.
-   </p>
-   <p>
-    This device will transfer a humanoid soul into a limbo-state, where it lives on a different plane of existance in a state of emprisonment. This plane is created within a rare allow of Rhenium, Gold, and Platinum formed into a shell. The outside of the shell is inlaid with many precious gems, which store the physical conciousness of the beings contained within the orb. These orbs are called
+    The Antianimus Device is huge ancient device found in a temple on chik'acarka island. This device was created by an ancient Aztec-like civilization that lived thousands of years prior. The civilization practiced spiritual rituals involving the human souls and humanoid sacrifices. They heavily believed in the connections of bloodlines and the power to control entire bloodlines with a great understanding of the physical blood and spiritual soul connections. The Antianimus Device revolves around this philosophy. This device will transfer a humanoid soul into a limbo-state, where it lives on a different plane of existance in a state of emprisonment. This plane is created within a rare alloy of Rhenium, Gold, and Platinum formed into a shell. The outside of the shell is inlaid with many precious gems, which store the physical conciousness of the beings contained within the orb. These orbs are called
     <a href="Tenichean_Soul_Orbs.html">
      Tenichean Soul Orbs
     </a>
