--- a/campaign/quests/index.html
+++ b/campaign/quests/index.html
@@ -51,8 +51,8 @@
   <div class="indexLinks">
    <ul>
     <li>
-     <a href="The_Giants_of_Ancient_Walls.html">
-      The Giants of Ancient Walls
+     <a href="Awaken_The_Ancient_Vister_Guardians.html">
+      Awaken The Ancient Vister Guardians
      </a>
     </li>
     <li>
