--- a/campaign/quests/Awaken_The_Ancient_Vister_Guardians.html
+++ b/campaign/quests/Awaken_The_Ancient_Vister_Guardians.html
@@ -3,7 +3,7 @@
  <head>
   <meta charset="utf-8"/>
   <title>
-   The Giants of Ancient Walls
+   Awaken The Ancient Vister Guardians
   </title>
   <link href="../../css/mmorpdnd.css" rel="stylesheet"/>
   <!-- JavaScript to handle navigation buttons -->
@@ -48,13 +48,19 @@
   </div>
   <div class="dnd-header">
    <h1>
-    The Giants of Ancient Walls
+    Awaken The
+    <a href="../creatures/monsters/Ancient_Vister_Guardian.html">
+     Ancient Vister Guardian
+    </a>
    </h1>
   </div>
   <hr/>
   <div class="dnd-info">
    <h3>
-    The Giants of Ancient Walls
+    Awaken The
+    <a href="../creatures/monsters/Ancient_Vister_Guardian.html">
+     Ancient Vister Guardian
+    </a>
    </h3>
    <p class="first-paragraph">
     This is a chain of one-shot quests that can be done using the
@@ -65,17 +71,19 @@
     <a href="../locations/cities/Suren/Suren.html">
      Suren
     </a>
-    . These walls were constructed thousands of years prior and are comprised of dormant Stone Giants. The power to wield these giants was lost with time but is slowly being uncovered by 'the customer' (as the players will hear them referenced). The power of these stone giants lay with the control of the
+    . These walls were constructed thousands of years prior and are comprised of dormant Stone Giants (
+    <a href="../creatures/monsters/Ancient_Vister_Guardian.html">
+     Ancient Vister Guardian
+    </a>
+    ). The power to wield these giants was lost with time but is slowly being uncovered by 'the customer' (as the players will hear them referenced). The power of these stone giants lay with the control and acquisition of eight
     <a href="../items/magic/Tenichean_Soul_Orbs.html">
-     Tenichean Soul Orbs</a>, which is the goal of 'the customer'.
+     Tenichean Soul Orbs</a>, which is the goal of 'the customer' (someone who already has collected some of the orbs).
    </p>
   </div>
   <hr/>
   <div class="dnd-info">
    <h3>
-    <a href="zaubergrube_arena/Zaubergrube_Arena.html">
-     Zaubergrube Arena
-    </a>
+    Zaubergrube Arena
    </h3>
    <p class="first-paragraph">
     The first quest in the series is the
@@ -99,7 +107,7 @@
     Retreiving The Book Of Artifacts
    </h3>
    <p class="first-paragraph">
-    The second quest in the series is Retreiving The Book Of Artifacts. This quest involves traveling to
+    The second quest in the series is Retreiving a book of artifacts. This quest involves traveling to
     <a href="../locations/cities/Vifavea/Vifavea.html">
      Vifavea</a>, finding the wizard
     <a href="../characters/non-player/milton_manastorm.html">
@@ -122,10 +130,7 @@
   <hr/>
   <div class="dnd-info">
    <h3>
-    <a href="../locations/regions/Matella/Daystone_Isle/Havenholme.html">
-     Havenholme
-    </a>
-    Prison Break
+    Havenholme Prison Break
    </h3>
    <p class="first-paragraph">
     The fourth quest in the series is
@@ -142,9 +147,7 @@
   <hr/>
   <div class="dnd-info">
    <h3>
-    <a href="tinker_zepplin_sabotage/tinker_zepplin_sabotage.html">
-     tinker zepplin sabotage
-    </a>
+    Tinker Zepplin Sabotage
    </h3>
    <p class="first-paragraph">
     The fifth quest in the series is
