--- a/campaign/items/magic/The_Infinatum_Illuminum.html
+++ b/campaign/items/magic/The_Infinatum_Illuminum.html
@@ -1,8 +1,9 @@
+<!DOCTYPE html>
 <html>
  <head>
   <meta charset="utf-8"/>
   <title>
-   index
+   The Infinatum Illuminum
   </title>
   <link href="../../../css/mmorpdnd.css" rel="stylesheet"/>
   <!-- JavaScript to handle navigation buttons -->
@@ -45,32 +46,40 @@
     Forward
    </a>
   </div>
-  <h1>
-   Index of /home/awtorode/git/DnD/campaign/items/books
-  </h1>
-  <div class="indexLinks">
-   <ul>
-    <li>
-     <a href="Ancient_Torture_Techniques.html">
-      Ancient Torture Techniques
-     </a>
-    </li>
-    <li>
-     <a href="The_Art_Of_War_Series.html">
-      The Art Of War Series
-     </a>
-    </li>
-    <li>
-     <a href="The_Book_Of_Artii.html">
-      The Book Of Artii
-     </a>
-    </li>
-    <li>
-     <a href="The_Book_Of_Celestas.html">
-      The Book Of Celestas
-     </a>
-    </li>
-   </ul>
+  <div class="dnd-header">
+   <h1>
+    The Infinatum Illuminum
+   </h1>
+  </div>
+  <hr/>
+  <div class="dnd-image">
+   <h3>
+    The Infinatum Illuminum
+   </h3>
+   <p>
+    <div class="dnd-image-info">
+     <div class="dnd-image-list">
+      <a href="img/the_infinatum_illuminum.jpg">
+       <img alt="Image" src="img/the_infinatum_illuminum.jpg"/>
+      </a>
+     </div>
+     <div class="dnd-image-source">
+      Source: Created by Bing AI image generator.
+     </div>
+     <div class="dnd-image-caption">
+      Caption: The Infinatum Illuminum
+     </div>
+    </div>
+   </p>
+  </div>
+  <hr/>
+  <div class="dnd-info">
+   <h3>
+    The Infinatum Illuminum
+   </h3>
+   <p class="first-paragraph">
+    The Infinatum Illuminum is a small handheld device. It has a small rod with a gem attached to the end. The gem is illuminated and glows indefinitely.
+   </p>
   </div>
  </body>
 </html>
