--- a/campaign/items/magic/img/index.html
+++ b/campaign/items/magic/img/index.html
@@ -135,6 +135,11 @@
       tenichean soul orbs (4).jpg
      </a>
     </li>
+    <li>
+     <a href="the_infinatum_illuminum.jpg">
+      the infinatum illuminum.jpg
+     </a>
+    </li>
    </ul>
   </div>
  </body>
