--- a/campaign/quests/index.html
+++ b/campaign/quests/index.html
@@ -56,6 +56,11 @@
      </a>
     </li>
     <li>
+     <a href="Retreiving_The_Book_Of_Artii.html">
+      Retreiving The Book Of Artii
+     </a>
+    </li>
+    <li>
      <a class="dir-index-link" href="manastorm_legal_advisors/index.html">
       <i class="fas fa-folder">
       </i>
