--- a/campaign/items/magic/index.html
+++ b/campaign/items/magic/index.html
@@ -71,6 +71,11 @@
      </a>
     </li>
     <li>
+     <a href="The_Infinatum_Illuminum.html">
+      The Infinatum Illuminum
+     </a>
+    </li>
+    <li>
      <a href="The_Puzzle_Box_of_Zytharoth.html">
       The Puzzle Box of Zytharoth
      </a>
@@ -192,6 +197,13 @@
       <i class="fas fa-camera">
       </i>
       img/tenichean_soul_orbs (4).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/the_infinatum_illuminum.jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/the_infinatum_illuminum.jpg
      </a>
     </li>
    </ul>
