--- a/campaign/locations/towns/Dessaquest/img/index.html
+++ b/campaign/locations/towns/Dessaquest/img/index.html
@@ -60,6 +60,11 @@
       Dessaquest (2).jpg
      </a>
     </li>
+    <li>
+     <a href="Dessaquest-top.jpg">
+      Dessaquest-top.jpg
+     </a>
+    </li>
    </ul>
   </div>
  </body>
