--- a/campaign/locations/towns/Dessaquest/index.html
+++ b/campaign/locations/towns/Dessaquest/index.html
@@ -69,6 +69,13 @@
       img/Dessaquest (2).jpg
      </a>
     </li>
+    <li>
+     <a class="image-index-link" href="img/Dessaquest-top.jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/Dessaquest-top.jpg
+     </a>
+    </li>
    </ul>
   </div>
  </body>
