--- a/campaign/items/consumables/food/Melochi_Melon.html
+++ b/campaign/items/consumables/food/Melochi_Melon.html
@@ -79,7 +79,9 @@
   <hr/>
   <div class="dnd-info">
    <h3>
-    Melochini
+    <a href="Melochini.html">
+     Melochini
+    </a>
    </h3>
    <p class="first-paragraph">
     Melochi Melon, is an exotic fruit that grows in the
