Added class folders to non-player character creation output path

--- a/campaign/characters/non-player/druid/Abigail_Reed.html
+++ b/campaign/characters/non-player/druid/Abigail_Reed.html
@@ -3,9 +3,9 @@
  <head>
   <meta charset="utf-8"/>
   <title>
-   abigail reed
+   Abigail Reed
   </title>
-  <link href="../../../css/mmorpdnd.css" rel="stylesheet"/>
+  <link href="../../../../css/mmorpdnd.css" rel="stylesheet"/>
   <!-- JavaScript to handle navigation buttons -->
   <script crossorigin="anonymous" src="https://kit.fontawesome.com/f3aa8d5630.js">
   </script>
