--- a/campaign/characters/non-player/index.html
+++ b/campaign/characters/non-player/index.html
@@ -341,11 +341,6 @@
      </a>
     </li>
     <li>
-     <a href="abigail_reed.html">
-      abigail reed
-     </a>
-    </li>
-    <li>
      <a href="adrian_hearthwood.html">
       adrian hearthwood
      </a>
@@ -773,6 +768,13 @@
      </a>
     </li>
     <li>
+     <a class="dir-index-link" href="druid/index.html">
+      <i class="fas fa-folder">
+      </i>
+      druid
+     </a>
+    </li>
+    <li>
      <a class="dir-index-link" href="dwarf/index.html">
       <i class="fas fa-folder">
       </i>
@@ -819,13 +821,6 @@
       <i class="fas fa-folder">
       </i>
       tiefling
-     </a>
-    </li>
-    <li>
-     <a class="image-index-link" href="img/abigail_reed.jpg">
-      <i class="fas fa-camera">
-      </i>
-      img/abigail_reed.jpg
      </a>
     </li>
     <li>
