Updated havenholme and a few links

--- a/campaign/locations/cities/Vifavea/Mansion/index.html
+++ b/campaign/locations/cities/Vifavea/Mansion/index.html
@@ -62,6 +62,13 @@
       img/The_Mansion_Underground_Rooms.png
      </a>
     </li>
+    <li>
+     <a class="image-index-link" href="img/The_Mansion_Underground_Rooms_printable.png">
+      <i class="fas fa-camera">
+      </i>
+      img/The_Mansion_Underground_Rooms_printable.png
+     </a>
+    </li>
    </ul>
   </div>
  </body>
