--- a/campaign/locations/cities/Vifavea/index.html
+++ b/campaign/locations/cities/Vifavea/index.html
@@ -70,6 +70,13 @@
      </a>
     </li>
     <li>
+     <a class="image-index-link" href="img/Vifavea (2) print version.jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/Vifavea (2) print version.jpg
+     </a>
+    </li>
+    <li>
      <a class="image-index-link" href="img/Vifavea (2).jpg">
       <i class="fas fa-camera">
       </i>
