--- a/campaign/locations/regions/Matella/Daystone_Isle/havenholme/Havenholme.html
+++ b/campaign/locations/regions/Matella/Daystone_Isle/havenholme/Havenholme.html
@@ -5,7 +5,7 @@
   <title>
    Havenholme
   </title>
-  <link href="../../../../../css/mmorpdnd.css" rel="stylesheet"/>
+  <link href="../../../../../../css/mmorpdnd.css" rel="stylesheet"/>
   <!-- JavaScript to handle navigation buttons -->
   <script crossorigin="anonymous" src="https://kit.fontawesome.com/f3aa8d5630.js">
   </script>
@@ -58,7 +58,7 @@
    </h3>
    <p class="first-paragraph">
     Havenholme, also known as Nightstone Isle, stands as a secluded and formidable island situated northwest of
-    <a href="Daystone_Isle.html">
+    <a href="../Daystone_Isle.html">
      Daystone Isle
     </a>
     . It is renowned for its discreet operations and controlled environment, functioning as a prison colony under the jurisdiction of the esteemed Daystone royal family. Accessible solely through a southern port, Havenholme is shrouded in an aura of secrecy, with its well-guarded perimeter and vigilant patrols ensuring that its prisoners remain confined within its shores.
@@ -94,7 +94,7 @@
     White Camp (Minrise)
    </h4>
    <p class="subsection">
-    Exonerated prisoners in Minrise enjoy the privilege of residing in a small city on the island where they are not subjected to forced prison work. They have the freedom to pursue various roles, such as administration, education, healthcare, artistic endeavors, or providing services to the community. Prisoners in Minrise engage in productive and constructive activities of their choice, contributing to the well-being of the community. They participate in communal events, socialize, pursue personal interests, and make positive contributions to the overall development of the city. Exonerated prisoners in Minrise are treated with some respect and dignity. They are provided with accommodations, and opportunities for personal growth through educational programs and vocational training. Many of the prisoners residing in Minrise have made it their home.
+    The White Camp, also known as Minrise, is a unique area on Havenholme where prisoners who have demonstrated exemplary behavior are housed. Though these prisoners have not been fully pardoned and remain under the control of the Daystone royal family, they have been granted a degree of freedom due to their good conduct and the guards' limited manpower. Unlike the other camps, Minrise residents are not subjected to forced labor and instead are allowed to pursue constructive roles within the community. They engage in various activities such as administration, education, healthcare, artistic endeavors, and other services that benefit the island. In Minrise, prisoners enjoy a more dignified existence, living in modest accommodations and participating in communal events. They are encouraged to develop skills through educational programs and vocational training, contributing positively to the island’s self-sufficiency and social fabric. Despite their relatively better conditions, these prisoners are still restricted to the island and cannot leave, as they remain under the watchful eye of the guards.
    </p>
    <h4>
     Blue Camp
@@ -106,19 +106,19 @@
     Green Camp
    </h4>
    <p class="subsection">
-    Prisoners in the Green Camp engage in vital agricultural activities to sustain the island's food supply. They cultivate crops, tend to livestock, maintain irrigation systems, and contribute to the overall productivity of the island's farms. Prisoners in the Green Camp work diligently in the fields, ensuring the successful growth and harvest of crops. They follow strict agricultural practices, manage irrigation, and take responsibility for the welfare of the livestock under their care. Green Camp prisoners are provided with adequate resources, tools, and equipment necessary for agricultural work. They receive balanced meals, access to medical facilities, and training in sustainable farming techniques to maximize productivity.
+    Prisoners in the Green Camp focus primarily on livestock management and fishing duties to sustain Havenholme's food supply. They are responsible for tending to the island's livestock, including feeding, breeding, and overseeing the health and well-being of animals such as cattle, sheep, and poultry. Additionally, prisoners engage in fishing along Havenholme's coastlines, using nets and boats to harvest the rich marine resources available. Green Camp prisoners are trained in both animal husbandry and sustainable fishing practices, ensuring the island's food resources are effectively managed. They are provided with the necessary tools and equipment to perform their tasks efficiently and receive adequate nutrition, medical care, and access to training to enhance their skills in these areas.
    </p>
    <h4>
     Yellow Camp
    </h4>
    <p class="subsection">
-    Prisoners in the Yellow Camp, convicted of theft, forgery, or moderate offenses, utilize their skills in various trades and crafts. They engage in weaving, carpentry, blacksmithing, pottery, or other artistic endeavors that contribute to the island's economy. Prisoners in the Yellow Camp dedicate their time to perfecting their craft skills, creating high-quality products that reflect their craftsmanship. They follow precise techniques, meeting strict standards of quality and quantity, under careful supervision. Yellow Camp prisoners are provided with specialized workshops, tools, and materials to excel in their chosen trades. Their work is inspected and evaluated regularly, with opportunities to showcase their creations within Havenholme and potentially beyond.
+    Prisoners in the Yellow Camp, often convicted of theft, forgery, assault, or other moderate offenses, primarily engage in labor-intensive agricultural activities. They are tasked with cultivating crops, maintaining fields, and handling the more physically demanding aspects of farm work, such as plowing, planting, and harvesting. In addition to fieldwork, Yellow Camp prisoners assist with the maintenance of irrigation systems and soil management to maximize agricultural yield. They work under strict supervision and adhere to precise agricultural methods to ensure the island's farms remain productive. Yellow Camp prisoners are provided with basic farming tools and equipment, along with essential resources such as water and fertilizers. Their work is regularly assessed for quality and efficiency, and they receive training to improve their farming skills and productivity.
    </p>
    <h4>
     Orange Camp
    </h4>
    <p class="subsection">
-    Prisoners in the Orange Camp, convicted of assault or related crimes, are assigned to construction projects, infrastructure maintenance, and repair work throughout Havenholme. They contribute to the island's development and ensure its upkeep. Prisoners in the Orange Camp actively participate in construction projects, focusing on precision and efficiency in their work. They engage in building structures, repairing facilities, and maintaining the island's infrastructure according to stringent guidelines. Orange Camp prisoners receive thorough training in construction techniques and safety protocols. They are provided with necessary protective gear, and their work is closely supervised to ensure compliance with safety standards.
+    Prisoners in the Orange Camp, often convicted of theft, assault or related crimes, are assigned to construction projects, infrastructure maintenance, and a variety of trades and crafts. They engage in building new structures, repairing existing facilities, and maintaining essential infrastructure across Havenholme. In addition to construction work, these prisoners are involved in various crafts, such as carpentry, masonry, and metalwork, contributing to both the island's development and its economy. Orange Camp prisoners receive comprehensive training in construction techniques, safety protocols, and craftsmanship skills. They are equipped with the necessary tools and protective gear and work under strict supervision to ensure safety and quality standards are met. Their diverse skill set makes them versatile laborers capable of addressing the island's ongoing construction and crafting needs.
    </p>
    <h4>
     Red Camp
@@ -163,13 +163,7 @@
     Watch Commanders
    </h4>
    <p class="subsection">
-    Skilled magical practitioners entrusted with overseeing surveillance efforts across Havenholme. Watch commanders use their magical abilities to monitor the prison colony, employing scrying techniques, enchanted artifacts, and spells to observe prisoner activities, detect disturbances, and prevent escapes.
-   </p>
-   <h4>
-    Senior Guards
-   </h4>
-   <p class="subsection">
-    Experienced and trusted members of the prison staff, senior guards oversee specific areas or camps within Havenholme. They maintain discipline, enforce rules, and coordinate the activities of guards and insurrectionists under their command. Senior guards also assist watch commanders in monitoring prisoner behavior magically.
+    The Watch Commanders serve as the primary overseers of Havenholme's surveillance and security efforts, combining both magical prowess and strategic oversight. These skilled practitioners are responsible for maintaining the island's extensive surveillance network, which includes a blend of magical and mundane methods to monitor prisoner activities, detect disturbances, and prevent escapes. Utilizing a range of magical abilities such as scrying, clairvoyance, and enchantments, Watch Commanders can observe key areas in real-time, ensuring that any signs of unrest or escape are swiftly identified and addressed. In addition to their surveillance duties, Watch Commanders also coordinate with the other security forces on the island, such as guards and naval patrols, to respond to incidents and maintain order. They are equipped with enchanted artifacts and stationed in strategic watchtowers that provide them with a broad view of the island and its surroundings. Watch Commanders are integral to Havenholme's security apparatus, balancing the use of magic with traditional guard tactics to ensure a well-rounded and effective approach to maintaining control over the prison colony.
    </p>
    <h4>
     Insurrectionists (Undercover Guards)
@@ -184,12 +178,6 @@
     The core workforce responsible for maintaining security and order within the prison colony. Guards perform regular patrols, monitor prisoner activities, and respond to incidents. They are trained in combat, crowd control, and magical techniques to ensure the safety of prisoners, staff, and the overall integrity of Havenholme.
    </p>
    <h4>
-    Surveillance Mages
-   </h4>
-   <p class="subsection">
-    Skilled magic users responsible for maintaining and operating the magical surveillance network across Havenholme. Using scrying spells, magical artifacts, and enchanted watchtowers strategically placed around the island, surveillance mages keep a watchful eye on prisoner activities, ensuring no escape attempts or unauthorized movements go unnoticed.
-   </p>
-   <h4>
     Medical Personnel
    </h4>
    <p class="subsection">
@@ -202,6 +190,5 @@
     Supporting the overall operations of Havenholme, administrative staff members handle various administrative tasks, including record-keeping, scheduling, and logistics. They facilitate communication between different departments, manage personnel files, and ensure the smooth functioning of administrative processes.
    </p>
   </div>
-  <hr/>
  </body>
 </html>
