--- a/campaign/locations/regions/Matella/Daystone_Isle/index.html
+++ b/campaign/locations/regions/Matella/Daystone_Isle/index.html
@@ -56,8 +56,10 @@
      </a>
     </li>
     <li>
-     <a href="Havenholme.html">
-      Havenholme
+     <a class="dir-index-link" href="havenholme/index.html">
+      <i class="fas fa-folder">
+      </i>
+      havenholme
      </a>
     </li>
     <li>
