--- a/campaign/locations/cities/Vifavea/img/index.html
+++ b/campaign/locations/cities/Vifavea/img/index.html
@@ -56,6 +56,11 @@
      </a>
     </li>
     <li>
+     <a href="Vifavea (2) print version.jpg">
+      Vifavea (2) print version.jpg
+     </a>
+    </li>
+    <li>
      <a href="Vifavea (2).jpg">
       Vifavea (2).jpg
      </a>
