--- a/campaign/locations/regions/Matella/Daystone_Isle/Daystone_Isle.html
+++ b/campaign/locations/regions/Matella/Daystone_Isle/Daystone_Isle.html
@@ -318,14 +318,14 @@
     The ruling family imposes taxes and collects tributes from the inhabitants of Daystone Isle. The collected revenue contributes to the royal treasury, funding public works, infrastructure projects, and the maintenance of the ruling family's estates. The taxation system ensures a steady source of income for the government, although it can sometimes be perceived as burdensome by the common folk.
    </p>
    <h4>
-    <a href="Havenholme.html">
+    <a href="havenholme/Havenholme.html">
      Havenholme
     </a>
     Labor
    </h4>
    <p class="subsection">
     Daystone Isle is home to a hidden prison colony called
-    <a href="Havenholme.html">
+    <a href="havenholme/Havenholme.html">
      Havenholme</a>, where incarcerated individuals are put to work performing labor and resource extraction. The Daystone royal family profits from this arrangement, utilizing the labor force to harvest resources, such as mining precious minerals, logging timber, or performing other tasks that contribute to their wealth and influence. The prison colony's labor supports various sectors of the economy, adding to the island's overall productivity and profitability.
    </p>
    <h4>
@@ -362,13 +362,13 @@
     Given its strategic coastal location, Daystone Isle offers extensive opportunities for naval travel. The island maintains a bustling port where ships and vessels arrive and depart regularly. Visitors from neighboring provinces and distant lands can reach Daystone Isle via these naval routes, bringing with them goods, trade, and cultural exchanges.
    </p>
    <h4>
-    <a href="Havenholme.html">
+    <a href="havenholme/Havenholme.html">
      Havenholme
     </a>
     Access
    </h4>
    <p class="subsection">
-    <a href="Havenholme.html">
+    <a href="havenholme/Havenholme.html">
      Havenholme</a>, the prison colony located to the northwest of Daystone Isle, is accessible by boat. Specialized transport vessels, discreetly operated by the Daystone royal family, facilitate transportation to and from the prison colony. These vessels follow secretive routes, ensuring the security and containment of the colony without arousing undue suspicion from outsiders.
    </p>
    <h4>
@@ -376,9 +376,9 @@
    </h4>
    <p class="subsection">
     To maintain the security and integrity of
-    <a href="Havenholme.html">
+    <a href="havenholme/Havenholme.html">
      Havenholme</a>, naval vessels patrol the waters surrounding the prison colony. These vessels, under the discreet command of the Daystone royal family, keep a watchful eye on the area to prevent unauthorized access or escape attempts. While their presence may go unnoticed by the general public, these vessels act as a deterrent to curious individuals and ensure the controlled environment of
-    <a href="Havenholme.html">
+    <a href="havenholme/Havenholme.html">
      Havenholme
     </a>
     .
@@ -388,11 +388,11 @@
    </h4>
    <p class="subsection">
     Due to the sensitive nature of
-    <a href="Havenholme.html">
+    <a href="havenholme/Havenholme.html">
      Havenholme
     </a>
     as a prison colony, access to the island is highly restricted. Visitors are not allowed direct access to
-    <a href="Havenholme.html">
+    <a href="havenholme/Havenholme.html">
      Havenholme
     </a>
     unless they possess proper authorization or have a legitimate reason to visit, such as authorized personnel or official delegations. The naval vessels and security measures in place prevent unauthorized individuals from approaching or interfering with the operations of the prison colony.
@@ -405,7 +405,7 @@
    </p>
    <p class="first-paragraph">
     It is important to note that while the transportation system of Daystone Isle ensures efficient travel and accessibility, certain areas and routes may be subject to restricted access or heightened security measures due to the presence of
-    <a href="Havenholme.html">
+    <a href="havenholme/Havenholme.html">
      Havenholme
     </a>
     and the Daystone royal family's control over the prison colony.
@@ -444,18 +444,18 @@
     Given the royal family's prominent position and their control over Daystone Isle, occasional political intrigues and power struggles may arise. These incidents, often confined to the realm of politics and influential circles, are managed internally by the royal family and their advisors to maintain stability and harmony within their domain.
    </p>
    <h4>
-    <a href="Havenholme.html">
+    <a href="havenholme/Havenholme.html">
      Havenholme
     </a>
     Prison Colony
    </h4>
    <p class="subsection">
     The presence of the
-    <a href="Havenholme.html">
+    <a href="havenholme/Havenholme.html">
      Havenholme
     </a>
     prison colony off the northwest coast of Daystone Isle adds another layer to the island's crime landscape. While the operations and security measures of
-    <a href="Havenholme.html">
+    <a href="havenholme/Havenholme.html">
      Havenholme
     </a>
     are discreetly managed by the Daystone royal family, occasional attempts at escape or breaches of security may occur. However, the security forces and specialized personnel dedicated to the prison colony work diligently to prevent such incidents and ensure the containment of prisoners.
@@ -486,7 +486,7 @@
     Landmarks and Other Features
    </h3>
    <p>
-    <a href="Havenholme.html">
+    <a href="havenholme/Havenholme.html">
      Havenholme
     </a>
     : A secluded island northwest of Daystone Isle, known for its discreet operations and controlled environment, serving as a prison colony under the jurisdiction of the Daystone royal family.
