--- a/campaign/locations/regions/Matella/Daystone_Isle/havenholme/index.html
+++ b/campaign/locations/regions/Matella/Daystone_Isle/havenholme/index.html
@@ -46,18 +46,20 @@
    </a>
   </div>
   <h1>
-   Index of /home/awtorode/git/DnD/campaign/locations/cities/Vifavea/Mansion/img
+   Index of /home/awtorode/git/DnD/campaign/locations/regions/Matella/Daystone_Isle/havenholme
   </h1>
   <div class="indexLinks">
    <ul>
     <li>
-     <a href="The_Mansion_Underground_Rooms_printable.png">
-      The Mansion Underground Rooms printable.png
+     <a href="Havenholme.html">
+      Havenholme
      </a>
     </li>
     <li>
-     <a href="The_Mansion_Underground_Rooms.png">
-      The Mansion Underground Rooms.png
+     <a class="image-index-link" href="img/havenholme.png">
+      <i class="fas fa-camera">
+      </i>
+      img/havenholme.png
      </a>
     </li>
    </ul>
