--- a/campaign/quests/retrieving_the_book_of_artii/index.html
+++ b/campaign/quests/retrieving_the_book_of_artii/index.html
@@ -4,7 +4,7 @@
   <title>
    index
   </title>
-  <link href="../../../../../../css/mmorpdnd.css" rel="stylesheet"/>
+  <link href="../../../css/mmorpdnd.css" rel="stylesheet"/>
   <!-- JavaScript to handle navigation buttons -->
   <script crossorigin="anonymous" src="https://kit.fontawesome.com/f3aa8d5630.js">
   </script>
@@ -46,18 +46,18 @@
    </a>
   </div>
   <h1>
-   Index of /home/awtorode/git/DnD/campaign/locations/cities/Vifavea/Mansion/img
+   Index of /home/awtorode/git/DnD/campaign/quests/retrieving_the_book_of_artii
   </h1>
   <div class="indexLinks">
    <ul>
     <li>
-     <a href="The_Mansion_Underground_Rooms_printable.png">
-      The Mansion Underground Rooms printable.png
+     <a href="Retrieving_The_Book_Of_Artii.html">
+      Retrieving The Book Of Artii
      </a>
     </li>
     <li>
-     <a href="The_Mansion_Underground_Rooms.png">
-      The Mansion Underground Rooms.png
+     <a href="orbitee_letter.jpg">
+      orbitee letter.jpg
      </a>
     </li>
    </ul>
