Added some pages

--- a/campaign/locations/regions/Matella/Daystone_Isle/havenholme/index.html
+++ b/campaign/locations/regions/Matella/Daystone_Isle/havenholme/index.html
@@ -62,6 +62,27 @@
       img/havenholme.png
      </a>
     </li>
+    <li>
+     <a class="image-index-link" href="img/havenholme_paper.png">
+      <i class="fas fa-camera">
+      </i>
+      img/havenholme_paper.png
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/havenholme_print.png">
+      <i class="fas fa-camera">
+      </i>
+      img/havenholme_print.png
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/havenholme_print_2.png">
+      <i class="fas fa-camera">
+      </i>
+      img/havenholme_print_2.png
+     </a>
+    </li>
    </ul>
   </div>
  </body>
