--- a/campaign/puzzles/blood_caves/creatures/index.html
+++ b/campaign/puzzles/blood_caves/creatures/index.html
@@ -4,7 +4,7 @@
   <title>
    index
   </title>
-  <link href="../../../../../../../css/mmorpdnd.css" rel="stylesheet"/>
+  <link href="../../../../css/mmorpdnd.css" rel="stylesheet"/>
   <!-- JavaScript to handle navigation buttons -->
   <script crossorigin="anonymous" src="https://kit.fontawesome.com/f3aa8d5630.js">
   </script>
@@ -46,28 +46,63 @@
    </a>
   </div>
   <h1>
-   Index of /home/awtorode/git/DnD/campaign/locations/regions/Matella/Daystone_Isle/havenholme/img
+   Index of /home/awtorode/git/DnD/campaign/puzzles/blood_caves/creatures
   </h1>
   <div class="indexLinks">
    <ul>
     <li>
-     <a href="havenholme_paper.png">
-      havenholme paper.png
+     <a href="black pudding.PNG">
+      black pudding.PNG
      </a>
     </li>
     <li>
-     <a href="havenholme_print_2.png">
-      havenholme print 2.png
+     <a href="bone naga.PNG">
+      bone naga.PNG
      </a>
     </li>
     <li>
-     <a href="havenholme_print.png">
-      havenholme print.png
+     <a href="fire snake.PNG">
+      fire snake.PNG
      </a>
     </li>
     <li>
-     <a href="havenholme.png">
-      havenholme.png
+     <a href="gtalatenous cube.PNG">
+      gtalatenous cube.PNG
+     </a>
+    </li>
+    <li>
+     <a href="myconid.PNG">
+      myconid.PNG
+     </a>
+    </li>
+    <li>
+     <a href="phase spider.PNG">
+      phase spider.PNG
+     </a>
+    </li>
+    <li>
+     <a href="piercer.PNG">
+      piercer.PNG
+     </a>
+    </li>
+    <li>
+     <a href="roper.PNG">
+      roper.PNG
+     </a>
+    </li>
+    <li>
+     <a href="rust monster.PNG">
+      rust monster.PNG
+     </a>
+    </li>
+    <li>
+     <a href="water weird.PNG">
+      water weird.PNG
+     </a>
+    </li>
+    <li>
+     <a href="wraith.PNG">
+      wraith.PNG
      </a>
     </li>
    </ul>
