--- a/campaign/puzzles/blood_caves/index.html
+++ b/campaign/puzzles/blood_caves/index.html
@@ -4,7 +4,7 @@
   <title>
    index
   </title>
-  <link href="../../../../../../../css/mmorpdnd.css" rel="stylesheet"/>
+  <link href="../../../css/mmorpdnd.css" rel="stylesheet"/>
   <!-- JavaScript to handle navigation buttons -->
   <script crossorigin="anonymous" src="https://kit.fontawesome.com/f3aa8d5630.js">
   </script>
@@ -46,28 +46,39 @@
    </a>
   </div>
   <h1>
-   Index of /home/awtorode/git/DnD/campaign/locations/regions/Matella/Daystone_Isle/havenholme/img
+   Index of /home/awtorode/git/DnD/campaign/puzzles/blood_caves
   </h1>
   <div class="indexLinks">
    <ul>
     <li>
-     <a href="havenholme_paper.png">
-      havenholme paper.png
+     <a href="blood_caves_of_havenholme.html">
+      blood caves of havenholme
      </a>
     </li>
     <li>
-     <a href="havenholme_print_2.png">
-      havenholme print 2.png
+     <a href="riddles and clues.txt">
+      riddles and clues.txt
      </a>
     </li>
     <li>
-     <a href="havenholme_print.png">
-      havenholme print.png
+     <a class="dir-index-link" href="coded/index.html">
+      <i class="fas fa-folder">
+      </i>
+      coded
      </a>
     </li>
     <li>
-     <a href="havenholme.png">
-      havenholme.png
+     <a class="dir-index-link" href="common/index.html">
+      <i class="fas fa-folder">
+      </i>
+      common
+     </a>
+    </li>
+    <li>
+     <a class="dir-index-link" href="creatures/index.html">
+      <i class="fas fa-folder">
+      </i>
+      creatures
      </a>
     </li>
    </ul>
