--- a/campaign/puzzles/index.html
+++ b/campaign/puzzles/index.html
@@ -70,6 +70,13 @@
      </a>
     </li>
     <li>
+     <a class="dir-index-link" href="blood_caves/index.html">
+      <i class="fas fa-folder">
+      </i>
+      blood caves
+     </a>
+    </li>
+    <li>
      <a class="dir-index-link" href="knight_castle_image/index.html">
       <i class="fas fa-folder">
       </i>
