--- a/campaign/quests/havenholme_prison_break/index.html
+++ b/campaign/quests/havenholme_prison_break/index.html
@@ -4,7 +4,7 @@
   <title>
    index
   </title>
-  <link href="../../../../../../../css/mmorpdnd.css" rel="stylesheet"/>
+  <link href="../../../css/mmorpdnd.css" rel="stylesheet"/>
   <!-- JavaScript to handle navigation buttons -->
   <script crossorigin="anonymous" src="https://kit.fontawesome.com/f3aa8d5630.js">
   </script>
@@ -46,28 +46,18 @@
    </a>
   </div>
   <h1>
-   Index of /home/awtorode/git/DnD/campaign/locations/regions/Matella/Daystone_Isle/havenholme/img
+   Index of /home/awtorode/git/DnD/campaign/quests/havenholme_prison_break
   </h1>
   <div class="indexLinks">
    <ul>
     <li>
-     <a href="havenholme_paper.png">
-      havenholme paper.png
+     <a href="havenholme_prison_break.html">
+      havenholme prison break
      </a>
     </li>
     <li>
-     <a href="havenholme_print_2.png">
-      havenholme print 2.png
-     </a>
-    </li>
-    <li>
-     <a href="havenholme_print.png">
-      havenholme print.png
-     </a>
-    </li>
-    <li>
-     <a href="havenholme.png">
-      havenholme.png
+     <a href="orbitee_letter.jpg">
+      orbitee letter.jpg
      </a>
     </li>
    </ul>
