--- a/campaign/quests/index.html
+++ b/campaign/quests/index.html
@@ -56,6 +56,13 @@
      </a>
     </li>
     <li>
+     <a class="dir-index-link" href="havenholme_prison_break/index.html">
+      <i class="fas fa-folder">
+      </i>
+      havenholme prison break
+     </a>
+    </li>
+    <li>
      <a class="dir-index-link" href="manastorm_legal_advisors/index.html">
       <i class="fas fa-folder">
       </i>
