--- a/index.html
+++ b/index.html
@@ -64,6 +64,11 @@
      .github
     </li>
     <li>
+     <i class="fas fa-folder">
+     </i>
+     .idea
+    </li>
+    <li>
      <a class="dir-index-link" href="campaign/index.html">
       <i class="fas fa-folder">
       </i>
@@ -79,6 +84,13 @@
      <i class="fas fa-folder">
      </i>
      docs
+    </li>
+    <li>
+     <a class="dir-index-link" href="music/index.html">
+      <i class="fas fa-folder">
+      </i>
+      music
+     </a>
     </li>
     <li>
      <i class="fas fa-folder">
