Added to engage system

--- a/campaign/notes/engage_system_public.html
+++ b/campaign/notes/engage_system_public.html
@@ -229,5 +229,30 @@
 </table>
 </div>
 <hr/>
+<div class="dnd-list">
+<h3>
+    Further Details On Gains Spent
+   </h3>
+<p>
+</p><ul>
+<li>
+      Crafting a basic item - This can be any basic item (weapons, armor, clothes, trinkets, etc) commonly found in the area of the players with any customization options desired by the players (color, engraving, style). This item can be customized to include special or magical characteristics if the player has other items (which would be destroyed in the process) that already contain these characteristics. For example, if the player has a magical sword which adds +1 to strength, they can create another sword with any custom look which also has +1 to strength (destroying the original in the process).
+     </li>
+<li>
+      Crafting a masterwork item  - The player can create an item with a stat bonus (determined by the DM).
+     </li>
+<li>
+      Starting a small business venture - The player must have (or be able to buy/learn) the appropriate tools and skills necessary for some sort of small business. The player can start this business and run it during game downtime. This business gives the player an advantage when conducting normal
+      <a href="profit_system_public.html">
+       profit system
+      </a>
+      calculations. If the player has this they gain one of the following affects when the
+      <a href="profit_system_public.html">
+       profit system
+      </a>
+      takes effect: +3 gold to a low-risk growth, +1 to the medium-risk dice roll, or +10% (ADD 10%) change to a high-risk investment outcome (i.e. if you roll a 20, this becomes 510% instead of 500%). This affect is multiplied for each time the player purchases this gain (i.e if the player purchase it 3 times, they would receive +9 gold to low-risk, +3 to medium-risk, or +30% to high-risk).
+     </li>
+</ul>
+</div>
 </body>
 </html>
